trialerror/Orange/style.css
:root {
    --primary: #f9ed32;
    --secondary: #8cc33c;
  }

/* https://gradientbuttons.colorion.co/ */

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

.space{
    width: 100%;
    min-height: 100vh;
    position: relative;
}

.o-body{
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index : -999;
}

.o-eye{
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index : -999;
}

.o-mouth{
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index : -999;
}




.hero{
    width: 100%;
    min-height: 100vh;
    /*
    background-image: url(material/back-image-3.png);
    background-position: center;
    background-size: cover;
    */
    padding: 10px 10%;
    position: relative;
    overflow: hidden;
}

nav{
    padding: 10px 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.logo{
    display: flex;
    align-items: center;
    width: 240px;
}

.logo-img{
    height: 35px;
    -webkit-filter: invert(100%);
    filter: invert(100%);
}

.logo-text{
    font-size: 15px;
    letter-spacing: -1px;
    font-weight: 900;
}

nav ul li{
    display: inline-block;
    list-style: none;
    margin: 10px 15px;
}

nav ul li a{
    text-decoration: none;
    color: #333;
    font-weight: 400;
    transition: 0.5s;
}

nav ul li a:hover{
    color: var(--primary);
}

.login-btn{
    text-decoration: none;
    color: #333;
    margin-right: 15px;
    font-weight: 400;
}

.btn{
    display: inline-block;
    text-decoration: none;
    padding: 14px 40px;
    color:#fff;
    background-image: linear-gradient(45deg, var(--primary), var(--secondary));
    font-size: 14px;
    border-radius: 30px;
    border-top-right-radius: 0;
    transition: 0.5s;
}

.content{
    top: 40%;
    margin-top: 150px;
    left: 50%;
    transform: translateX(-50%);
    max-width: 600px;
    z-index: 9999;
    position: absolute;
    text-align: center;
}

.content h1{
    font-size: 35px;
    color: #222;
}

.content p{
    margin: 10px 0 10px;
    color: #333;
    animation-delay: 0.5s;
}

.content .btn{
    margin-top: 20px;
    padding: 15px 80px;
    font-size: 16px;
    animation-delay: 1s;
}

.btn:hover{
    border-top-right-radius: 30px;
}

.social{
   margin-top: 25px;
   margin-bottom: 25px;
   display: flex;
   justify-content: space-between;
   width: 175px;
}

.social a{
    display: inline-flex;
    justify-content: center;
    align-items: center;
    width: 40px;
    height: 40px;
    background: transparent;
    border: 2px solid #333;
    border-radius: 50%;
    font-size: 20px;
    color: #333;
    text-decoration: none;
    transition: 0.5s;
}

.social a:hover{
    border-top-right-radius: 0;
    color: var(--secondary);
    border: 2px solid var(--secondary);
}

.social .fb{
    animation-delay: 1.5s;
}

.social .ig{
    animation-delay: 1.75s;
}

.social .yt{
    animation-delay: 2s;
}

.social .dc{
    animation-delay: 2.25s;
}

.software-used{
    display: flex;
    align-items: center;
    justify-content: center;
}

.software-used a{
    text-decoration: none;
    margin-left: 5px;
    font-size: 12px;
    color: #333;
    transition: 0.5s;
}

.software-used a:hover{
    color: var(--secondary);
}

.light-text{
    font-weight: 300;
}

.anim{
    opacity: 0;
    transform: translateY(30px);
    animation: moveUp 0.5s linear forwards;
}

@keyframes moveUp{
    100%{
        opacity: 1;
        transform: translateY(0px);
    }
}

